// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default state 1`] = `
Object {
  "currentBookData": null,
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": false,
  "sliderPercentageOnRelease": 0,
}
`;

exports[`handles BOOK_POSITION_DATA_UPDATED 1`] = `
Object {
  "currentBookData": Object {
    "author": "The book author",
    "cover_image": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
    "current_location": 0.96,
    "file": "blob",
    "id": 1,
    "parsed_data": null,
    "title": "A Good Book",
    "total_locations": 0,
  },
}
`;

exports[`handles LOAD_BOOK 1`] = `
Object {
  "currentBookData": null,
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": true,
  "sliderPercentageOnRelease": 0,
}
`;

exports[`handles LOAD_BOOK_COMPLETE 1`] = `
Object {
  "currentBookData": null,
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": false,
  "sliderPercentageOnRelease": 0,
}
`;

exports[`handles READER_EXITED 1`] = `
Object {
  "currentBookData": null,
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": false,
  "sliderPercentageOnRelease": 0,
}
`;

exports[`handles SLIDER_RELEASED 1`] = `
Object {
  "currentBookData": null,
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": false,
  "sliderPercentageOnRelease": 0.57,
}
`;

exports[`handles UPDATE_CURRENT_BOOK_DATA 1`] = `
Object {
  "currentBookData": Object {
    "author": "The book author",
    "cover_image": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
    "current_location": Object {
      "end": null,
      "percentage": 0,
      "start": null,
    },
    "file": "blob",
    "id": 1,
    "parsed_data": null,
    "title": "A Good Book",
    "total_locations": 0,
  },
  "currentBookId": null,
  "jumpToPage": null,
  "loadingBook": false,
  "sliderPercentageOnRelease": 0,
}
`;
